# lusby

./: .gitignore  COMMERCIAL_LICENSE  Cargo.toml  README.md  TODO.md  install.sh
.github/workflows/: ci.yml
crates/backend-mock/: Cargo.toml
crates/backend-mock/src/: lib.rs
crates/backend-usbguard/: Cargo.toml
crates/backend-usbguard/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  tui.rs
crates/cli/tests/: cli_main.rs  tui_baseline.rs
crates/common/: Cargo.toml
crates/common/src/: audit.rs  backend.rs  baseline.rs  crypto.rs  fingerprint.rs  lib.rs  tests.rs  types.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: audit.rs  dbus.rs  lib.rs  logind.rs  main.rs  polkit.rs  udev_monitor.rs
crates/daemon/tests/: daemon_main.rs  dbus_integration.rs
crates/tray/: Cargo.toml
crates/tray/src/: lib.rs  main.rs  ui.rs
crates/tray/tests/: tray_main.rs  tray_ui_enhancements.rs
packaging/: install.sh  postinstall_check.sh
packaging/apparmor/: usr.sbin.guardianusb-daemon  usr.sbin.lusby-daemon
packaging/config/: config.toml
packaging/polkit/: org.guardianusb.manage.policy  org.lusby.manage.policy
packaging/systemd/: guardianusb-daemon.service  lusby-daemon.service
