[package]
name = "guardianusb-backend-usbguard"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
guardianusb-common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
