[lib]
name = "lusbyctl"
path = "src/lib.rs"
[package]
name = "lusbyctl"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lusby-common = { path = "../common" }
ed25519-dalek = { version = "2" }
base64 = "0.22"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
whoami = "1"
libc = "0.2"

# TUI baseline editor dependencies
tui = "0.19"
crossterm = "0.27"
