[package]
name = "guardianusb-daemon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "GuardianUSB privileged daemon for managing usbguard policies and signed baselines"
authors = ["GuardianUSB Team <maintainers@example.com>"]

[features]
default = []
udev-monitor = ["dep:udev"]

[dependencies]
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
guardianusb-common = { path = "../common" }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
guardianusb-backend-usbguard = { path = "../backend-usbguard" }
udev = { version = "0.8", optional = true }
ed25519-dalek = "2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
base64 = "0.22"

[package.metadata.deb]
maintainer = "GuardianUSB Team <maintainers@example.com>"
section = "utils"
priority = "optional"
depends = "usbguard (>=1.0.0), libdbus-1-3, libgtk-3-0"
assets = [
    ["target/release/guardianusb-daemon", "usr/sbin/guardianusb-daemon", "755"],
    ["../../packaging/systemd/guardianusb-daemon.service", "lib/systemd/system/guardianusb-daemon.service", "644"],
    ["../../packaging/polkit/org.guardianusb.manage.policy", "usr/share/polkit-1/actions/org.guardianusb.manage.policy", "644"],
    ["../../packaging/apparmor/usr.sbin.guardianusb-daemon", "etc/apparmor.d/usr.sbin.guardianusb-daemon", "644"],
    ["../../packaging/config/config.toml", "etc/guardianusb/config.toml", "644"],
]
conf-files = [
    "/etc/guardianusb/config.toml",
]
