[lib]
name = "lusby_daemon"
path = "src/lib.rs"
[package]
name = "lusby-daemon"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Lusby privileged daemon for managing usbguard policies and signed baselines"
authors = ["MK2112 <mk2112@protonmail.com>"]

[features]
default = []
udev-monitor = ["dep:udev"]

[dependencies]
lusby-backend-mock = { path = "../backend-mock" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lusby-common = { path = "../common" }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
lusby-backend-usbguard = { path = "../backend-usbguard" }
udev = { version = "0.8", optional = true }
ed25519-dalek = "2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
base64 = "0.22"

[package.metadata.deb]
maintainer = "MK2112 <mk2112@protonmail.com>"
section = "utils"
priority = "optional"
depends = "usbguard (>=1.0.0), libdbus-1-3, libgtk-3-0"
assets = [
    ["target/release/lusby-daemon", "usr/sbin/lusby-daemon", "755"],
    ["../../packaging/systemd/lusby-daemon.service", "lib/systemd/system/lusby-daemon.service", "644"],
    ["../../packaging/polkit/org.lusby.manage.policy", "usr/share/polkit-1/actions/org.lusby.manage.policy", "644"],
    ["../../packaging/apparmor/usr.sbin.lusby-daemon", "etc/apparmor.d/usr.sbin.lusby-daemon", "644"],
    ["../../packaging/config/config.toml", "etc/lusby/config.toml", "644"],
]
conf-files = [
    "/etc/lusby/config.toml",
]
